<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/gfg_grass"
    xmlns:customtv="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logo"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:gravity="center_vertical"
            android:scaleType="center"
            android:src="@mipmap/gfg_logo" />

        <EditText
            android:id="@+id/user_name_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/background_drawable"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_drawable"
            android:hint="@string/password"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <CheckBox
                android:id="@+id/check_rember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:buttonTint="@color/white"
                android:gravity="left|center"
                android:padding="15dp"
                android:text="@string/remember"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/check_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/check_rember"
                android:layout_gravity="left|center"
                android:buttonTint="@color/white"
                android:gravity="left|center"
                android:padding="15dp"
                android:text="@string/forgetpass"
                android:textColor="@color/white" />
        </RelativeLayout>

        <com.sharmas.golf_android.common.CustomTextView
            android:id="@+id/tv_login"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/background_drawable"
            android:gravity="center"
            android:hint="@string/login"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            customtv:fontType="4"/>

    </LinearLayout>

</LinearLayout>