<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customtv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/gfg_grass">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:gravity="center_vertical"
                android:scaleType="fitCenter"
                android:src="@mipmap/gfg_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/logo"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">


                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/browse_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/background_drawable"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/browsefile"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    customtv:fontType="4" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/membership"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_drawable"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/member"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    customtv:fontType="4" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_drawable"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    customtv:fontType="4" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_drawable"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    customtv:fontType="4" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
