<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:customtv="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/gfg_grass"
    android:fitsSystemWindows="true">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66000000"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:gravity="left|center"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/gfg_logo" />

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="@mipmap/gfg_grass"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/gfg_grass"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_slider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@mipmap/gfg_location_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/mywidget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="top|end"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:freezesText="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:padding="8dp"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="Click on the image above to view more pictures"
                    android:textColor="#000"
                    android:textSize="12sp"
                    customtv:fontType="7" />

                <ImageView
                    android:id="@+id/logo_content"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/gfg_golf_club_icon" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/name_golf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="name"
                    android:textColor="#000"
                    android:textColorHint="@color/white"
                    android:textSize="18dp"
                    customtv:fontType="5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_drawable"
                android:orientation="vertical">

                <com.sharmas.golf_android.common.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/desc"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18dp"
                    customtv:fontType="5" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/desc_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="fill"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp"
                    customtv:fontType="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_drawable"
                android:orientation="vertical">

                <com.sharmas.golf_android.common.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/contact"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18dp"
                    customtv:fontType="4" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/contact_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="left"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/desc"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp"
                    customtv:fontType="4" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="left"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp"
                    customtv:fontType="4" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/contact_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="left"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp"
                    customtv:fontType="4" />

                <com.sharmas.golf_android.common.CustomTextView
                    android:id="@+id/contact_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="left"
                    android:padding="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="web"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="14dp"
                    customtv:fontType="4" />


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/sp_off_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_drawable"
                android:fitsSystemWindows="true">

                <include layout="@layout/specialoffers" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/off_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_drawable"
                android:fitsSystemWindows="true">

                <include layout="@layout/offers_listview" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/aminitis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_drawable"
                android:fitsSystemWindows="true">

                <include layout="@layout/aminites_listview" />
            </RelativeLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>